Fri Sep 28 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.2.0

* Added:
  - Initial build matrix support
  - Rake tasks:
    - `rake simp:packer:matrix[]` (experimental)
      - Iterates through a matrix of conditions to run `simp_packer_test.sh`
    - `rake vagrant:publish:local[]`
      - Install vagrant box into a local directory tree
      - Generates versioned metadata
  - YARD support
* Changed:
  - Improved vagrant box tree logic and code documentation
  - Fixed broken SIMP 6.1.0 support
    - (SIMP-5350) Fixed el6/udev/eth1 VM cloning bug
    - (SIMP-4482) Added umask to 6.1.0 `simp bootstrap`
  - Fixed box name bug in `Vagrantfile.erb.erb`


Mon Sep 17 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.1.1

* Changed:
  - Fixed error in tftpboot erb in simpsetup.

Wed Aug 30 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.1.0

* Added:
  - Tests:
    - Shell scripts are linted by shellcheck.
    - Ruby code is linted by rubocop.
    - rspec-puppet tests check the `simpsetup` Puppet module
  - Rake tasks:
    - `bundle exec rake test`: Runs all tests (rubocop, shellcheck, rspec)
    - `bundle exec rake clean`: Removes packer-breaking symlinks and fixtures
    - `bundle exec rake vagrant:boxname[]`: (experimental) Generates a JSON file
       that Vagrantfiles and beaker nodesets can use to compare box versions
* Changed:
  - Fixed/rewrote the Travis CI pipeline
  - Cleaned up scripts and manifests:
    - Code conforms to common lint checks
    - Restructured puppet code:
      - Puppet code is now under `puppet/modules/` and `puppet/profiles/`.
      - Added module metadata and development files to `simpsetup`.
      - Unused manifest files have been given the suffix `.UNUSED`.
    - Added `rakelib/` directory for rake tasks
    - Added `lib/` directory for ruby code (prep for spec tests)
    - Fixed minor bugs
  - README:
    - Restructured and expanded documentation
    - Added a diagram of the basic workflow and directory structure.