@@ -1,8 +1,36 @@
-```sh
-SIMP_ISO_JSON="${ISO_PATH}/simp/releases/SIMP-6.1.0-0-Powered-by-CentOS-%OS_MAJ_VER%.?-x86_64.json" \
-bundle exec rake simp:packer:matrix[os=el6:el7,fips=on]
+## Build matrix
 
+Often, it is desirable to build several 'flavors' of simp-packer boxes at the
+same time. A rake task, `simp:packer:matrix` has been provided for this purpose.
+
+
+
+
+### Usage
+
+```sh
 MATRIX_LABEL=build_6.2.0RC1_ \
-SIMP_ISO_JSON=${ISO_PATH}/simp/prereleases/SIMP-6.2.0-RC1.%OS%-CentOS-%OS_MAJ_VER%.?-x86_64.json" \
-bundle exec rake simp:packer:matrix[os=el6:el7,fips=on]
+VAGRANT_BOX_DIR="$PATH_TO_VAGRANT_BOX_TREE" \
+SIMP_ISO_JSON_FILES='${PATH_TO_ISO_JSON_FILES}/SIMP-6.2.0-0.el*.json' \
+bundle exec rake simp:packer:matrix[os=el6:el7,fips=on:off]
 ```
+
+### Matrix arguments
+
+Matrix arguments are delimited by colons (`:`)
+
+| Matrix args   |  description |
+| `json=`       | list of absolute paths/globs to SIMP ISO `.json` files.  Optional if `SIMP_ISO_JSON_FILES` is set  |
+| `os=`         | OSes to include in the matrix.  json files will be filtered out if they do no match one of these values.  Supported arguments: `el6`, `el7`
+| `fips=`       |
+| `encryption=` | _(untested)_
+
+
+### Environment variables
+
+| Environment variable | description |
+| `VAGRANT_BOX_DIR`     | Path to top of Vagrant box tree |
+| `SIMP_ISO_JSON_FILES` | List of absolute paths/globs to SIMP ISO `.json` files to consider (delimiters: `:`, `,`).  This variable can be used as an alternative to the matrix entry `json=`.  Non-existent paths will be discarded with a warning message |
+| `MATRIX_LABEL`        | Label for this matrix run that will prefix each iteration's directory name (default: `build`) |
+
+
