@@ -1,4 +1,4 @@
-<%
+<%#
   # NOTE: YES, this file is intended to end with `.erb.erb`! :)
   #
   # This template is used by simp-packer to _create_ a propoerly-configured
